votingapp-gw-vs-ssl.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vote
spec:
  hosts:
  - "vote.cloudopswithswapnil.in"
  - "www.cloudopswithswapnil.in"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vote
        port:
          number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: result
spec:
  hosts:
  - "result.cloudopswithswapnil.in"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: result
        port:
          number: 80
